# scrapy-indicadores

./: .gitignore  CMakeLists.txt  MIGRACION-ZIG.md  README.md  build.sh  build.zig  build.zig.zon  index.js  indicadores.sqbpro  indicadores.sqlite3  package-lock.json  package.json  static_CMakeLists.txt  today.js
.github/workflows/: update-data.yml
builf/: CMakeCache.txt  build.ninja  cmake_install.cmake
includes/: helper.hpp  scrapycpp.hpp
public/: index.html  server.js
public/css/: style.css
public/data/: 12_06_2025.json
server/: README.md  index.ts
src/: #main.cpp#  c.h  main.cpp  main.zig  scrapy.zig  scrapycpp.cpp
www/: 1-index.html  index.html  manifest.json  style.min.css  sw.js
www-src/: build.js  data.json  index.html  style.css
